[gd_scene load_steps=21 format=3 uid="uid://0h5em6sfkjjc"]

[ext_resource type="PackedScene" uid="uid://dklaxvd7swq26" path="res://Characters/Character.tscn" id="1_r08ty"]
[ext_resource type="Script" path="res://Characters/Kitchen/kitchen_dude.gd" id="2_sagpd"]
[ext_resource type="Script" path="res://Characters/Resources/character_data.gd" id="3_c1yn5"]
[ext_resource type="PackedScene" uid="uid://dwlxfwet22vsm" path="res://Projectile/Food/fast_food.tscn" id="4_jy0yt"]
[ext_resource type="PackedScene" uid="uid://nb20bh8fjjjx" path="res://Characters/Kitchen/NPC_Kitchen_Male.glb" id="5_ok1r5"]

[sub_resource type="Resource" id="Resource_n7pet"]
resource_local_to_scene = true
script = ExtResource("3_c1yn5")
Team = "Kitchen"
max_health = 100
single_fire = true
base_damage = 10
special_damage = 0
projectile_damage = 20
projectile_speed = 20.0
max_ammo = 20
move_speed = 9.0
acceleration = 0.1
gravity = 30.0
dodge_force = 15.0
punch_force = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2k3c"]
radius = 0.360333
height = 0.984089

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q01y7"]
radius = 0.187233
height = 0.466685

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8g2hp"]
radius = 0.0446285
height = 0.446285

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vm1nd"]
radius = 0.0493218
height = 0.493218

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6f0on"]
radius = 0.0446286
height = 0.446286

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ut6w6"]
radius = 0.0493218
height = 0.493218

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kergc"]
radius = 0.0858133
height = 0.858133

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d45yf"]
radius = 0.0799078
height = 0.799078

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v45br"]
radius = 0.0219582
height = 0.219582

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_73oto"]
radius = 0.0858133
height = 0.858133

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b3c0n"]
radius = 0.0799078
height = 0.799078

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6nqmj"]
radius = 0.0219582
height = 0.219582

[sub_resource type="BoxShape3D" id="BoxShape3D_gepra"]
size = Vector3(0.225582, 0.333053, 0.191658)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_cafs0"]

[node name="KitchenDude" instance=ExtResource("1_r08ty")]
script = ExtResource("2_sagpd")
character_stats = SubResource("Resource_n7pet")
projectile = ExtResource("4_jy0yt")

[node name="NPC_Kitchen_Male" parent="." index="1" instance=ExtResource("5_ok1r5")]
transform = Transform3D(-0.6, 0, -5.24537e-08, 0, 0.6, 0, 5.24537e-08, 0, -0.6, 0, 0, 0)

[node name="Skeleton3D" parent="NPC_Kitchen_Male/Kitchen_Male" index="0"]
bones/0/position = Vector3(5.28339e-06, -0.359052, -0.54277)
bones/0/rotation = Quaternion(0.115415, -0.395018, 0.0500992, 0.910017)
bones/1/rotation = Quaternion(-0.0855464, 0.257638, -0.0341717, 0.96184)
bones/2/rotation = Quaternion(-0.0774642, 1.47834e-08, -2.14509e-10, 0.996995)
bones/3/rotation = Quaternion(0.0016272, -7.6543e-09, -1.2455e-11, 0.999999)
bones/5/rotation = Quaternion(-0.0943413, 0.100049, -0.029062, 0.990073)
bones/6/rotation = Quaternion(-0.0662269, -0.151612, 0.00775617, 0.986188)
bones/8/rotation = Quaternion(-0.0719196, 0.398564, -0.762487, 0.504567)
bones/9/rotation = Quaternion(0.727001, 0.283241, 0.275972, 0.561323)
bones/10/rotation = Quaternion(0.220691, -0.0901127, 0.0890432, 0.967082)
bones/12/rotation = Quaternion(-0.302244, -0.644842, 0.559265, 0.424322)
bones/13/rotation = Quaternion(0.617944, 0.255034, 0.473354, 0.573619)
bones/14/rotation = Quaternion(-0.0109359, -0.215798, 0.439103, 0.872067)
bones/17/rotation = Quaternion(0.949651, 0.166205, -0.027436, 0.26417)
bones/18/rotation = Quaternion(0.200079, 0.0195641, 0.119206, 0.972304)
bones/19/rotation = Quaternion(-0.494434, -0.358615, 0.000880307, 0.791789)
bones/20/rotation = Quaternion(-0.0503513, 0.960464, -0.273804, 0.00226044)
bones/21/rotation = Quaternion(0.99213, -0.0312377, -0.0136453, 0.120482)
bones/22/rotation = Quaternion(0.195036, -0.00342373, 0.11715, 0.973768)
bones/23/rotation = Quaternion(-0.63094, 0.0585931, -0.162835, 0.756285)
bones/24/rotation = Quaternion(-0.00967882, -0.989604, 0.119311, 0.0797224)

[node name="Physical Bone Chest" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="1"]
transform = Transform3D(0.957106, -0.28943, -0.00826573, 0.0159268, 0.0810759, -0.996204, 0.289225, 0.952847, 0.0822094, -0.0519763, 0.304297, -0.502694)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.73821e-06, -1.80424e-05, -0.0897604)
body_offset = Transform3D(0.999979, -0.000136942, -1.80677e-07, 3.18512e-07, 2.84538e-05, -0.999624, -4.17233e-07, 0.999129, -1.4402e-05, 2.71946e-06, -0.0897267, 1.6734e-05)
angular_damp = 5.0
bone_name = "Chest"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone Chest" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_g2k3c")

[node name="Physical Bone spine005" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="2"]
transform = Transform3D(0.996362, -0.0843433, -0.00731745, 0.00467553, 0.140704, -0.983502, 0.0849009, 0.982069, 0.140037, -0.0648348, 1.03302, -0.461816)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99219e-07, -0.0725302, 0.212219)
body_offset = Transform3D(0.999984, 7.6741e-07, 4.67524e-07, 1.25729e-07, 0.270066, -0.956273, -1.06543e-06, 0.958351, 0.26923, 6.55651e-07, 0.222528, 0.0123736)
angular_damp = 5.0
bone_name = "spine.005"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone spine005" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_q01y7")

[node name="Physical Bone upper_armL" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="3"]
transform = Transform3D(-0.900061, -0.434466, 0.0327341, -0.31484, 0.700497, 0.640413, -0.301173, 0.566121, -0.767295, 0.265015, 0.495132, -0.198543)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.57033e-05, -6.25554e-05, 0.223261)
body_offset = Transform3D(0.99997, 1.60933e-06, -1.40071e-06, -8.9407e-08, -2.11596e-06, -0.999972, -5.21541e-07, 0.999975, 1.99676e-06, 4.60148e-05, 0.223254, 6.2108e-05)
angular_damp = 5.0
bone_name = "upper_arm.L"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone upper_armL" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_8g2hp")

[node name="Physical Bone forearmL" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="4"]
transform = Transform3D(-0.678345, -0.527447, 0.507454, -0.620168, 0.0431051, -0.783151, 0.393889, -0.841384, -0.359136, 0.132252, 0.545419, 0.0611771)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000266509, -0.000174208, 0.246836)
body_offset = Transform3D(0.999955, -0.000354379, -1.92225e-06, 1.07288e-06, -0.000770509, -0.999907, 8.64267e-07, 0.993975, -1.18017e-05, 0.00026691, 0.246812, 0.000176072)
angular_damp = 5.0
bone_name = "forearm.L"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone forearmL" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_vm1nd")

[node name="Physical Bone upper_armR" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="5"]
transform = Transform3D(-0.936249, -0.288045, 0.200649, 0.199147, 0.0350796, 0.979145, -0.289148, 0.956861, 0.0244985, -0.450426, 0.408214, -0.580228)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.33631e-06, -2.91485e-06, 0.22324)
body_offset = Transform3D(0.999914, -4.79817e-06, -2.09548e-06, -5.48903e-05, 9.07108e-06, -0.999793, -1.87755e-06, 0.999892, 2.97651e-06, -7.86781e-06, 0.223194, 2.25008e-06)
angular_damp = 5.0
bone_name = "upper_arm.R"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone upper_armR" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_6f0on")

[node name="Physical Bone forearmR" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="6"]
transform = Transform3D(-0.651363, -0.758427, 0.0181748, -0.746178, 0.636183, -0.195041, 0.136821, -0.140662, -0.980115, -0.499573, 0.23791, -0.343888)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00011947, 4.96659e-05, 0.246725)
body_offset = Transform3D(0.999888, 3.64203e-05, -0.000410736, -7.51019e-06, 2.6077e-06, -0.999499, 2.37636e-05, 0.999864, 1.16229e-06, -1.81198e-05, 0.246601, -4.99487e-05)
angular_damp = 5.0
bone_name = "forearm.R"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone forearmR" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_ut6w6")

[node name="Physical Bone Left_Thigh" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="7"]
transform = Transform3D(0.688191, 0.725116, -0.0238424, 0.326566, -0.280258, 0.902648, 0.647855, -0.628985, -0.429678, 0.0269589, -0.63637, -0.152546)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.974e-06, 1.41617e-05, 0.429069)
body_offset = Transform3D(0.999984, 5.06639e-07, -3.03984e-06, -2.38419e-07, -1.78814e-07, -0.999983, 4.64916e-06, 0.999979, -2.02656e-06, 3.27826e-06, 0.429061, -1.32918e-05)
angular_damp = 5.0
bone_name = "Left_Thigh"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone Left_Thigh" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_kergc")

[node name="Physical Bone shinL" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="8"]
transform = Transform3D(0.680406, 0.714608, -0.152432, 0.0979665, 0.117183, 0.987963, 0.725371, -0.686231, 0.00954714, 0.0978192, -1.41849, 0.027624)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000466939, -4.59411e-05, 0.399582)
body_offset = Transform3D(0.999356, -9.11057e-05, -7.00587e-06, -3.86406e-06, -8.39978e-05, -0.999698, 2.30074e-05, 0.997651, 0.000209733, -0.000463843, 0.399461, -3.79831e-05)
angular_damp = 5.0
bone_name = "shin.L"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone shinL" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_d45yf")

[node name="Physical Bone footL" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="9"]
transform = Transform3D(0.966169, -0.0859602, 0.242845, -0.212441, -0.799067, 0.56238, 0.145812, -0.595006, -0.790341, 0.132446, -1.87507, 0.110851)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.85928e-05, 3.91687e-05, 0.109795)
body_offset = Transform3D(0.999937, 8.29995e-06, -1.11759e-07, 8.51601e-05, 8.04663e-07, -0.999942, -6.51628e-05, 0.999964, 2.95043e-06, -4.85778e-05, 0.109789, -3.94881e-05)
angular_damp = 5.0
bone_name = "foot.L"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone footL" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_v45br")

[node name="Physical Bone Right_Thigh" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="10"]
transform = Transform3D(0.706985, 0.706364, 0.0330837, -0.0583221, 0.011617, 0.998162, 0.704727, -0.707676, 0.0494079, -0.218455, -0.677384, -0.59452)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99159e-06, 1.36053e-06, 0.429096)
body_offset = Transform3D(0.999934, 1.43349e-05, -5.44637e-06, 7.22706e-07, 8.50111e-06, -0.999932, -2.11298e-05, 0.999944, 8.49739e-06, 9.32813e-06, 0.429066, -5.00679e-06)
angular_damp = 5.0
bone_name = "Right_Thigh"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone Right_Thigh" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_73oto")

[node name="Physical Bone shinR" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="11"]
transform = Transform3D(0.717054, 0.692802, -0.0758293, -0.282506, 0.388415, 0.877051, 0.63708, -0.607521, 0.47427, -0.202284, -1.45611, -0.805211)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.25775e-05, -3.91263e-05, 0.399545)
body_offset = Transform3D(0.999924, 7.06315e-06, -2.98023e-08, -2.05636e-06, 2.89083e-06, -0.99995, 5.96046e-08, 0.999961, -5.36442e-07, 6.25849e-05, 0.399525, 3.93391e-05)
angular_damp = 5.0
bone_name = "shin.R"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone shinR" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_b3c0n")

[node name="Physical Bone footR" type="PhysicalBone3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="12"]
transform = Transform3D(0.729895, 0.416591, 0.539292, 0.0605997, -0.825494, 0.558968, 0.679738, -0.374651, -0.629602, -0.231264, -1.86791, -0.925565)
collision_layer = 8
collision_mask = 7
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.08974e-05, 2.53053e-05, 0.10981)
body_offset = Transform3D(0.999231, -0.000327706, -2.65241e-06, 0.000462323, 0.000899762, -0.999839, -0.000295013, 0.997672, 1.88798e-05, 3.11732e-05, 0.109792, -2.73287e-05)
angular_damp = 5.0
bone_name = "foot.R"
joint_constraints/angular_limit_enabled = true
joint_constraints/angular_limit_upper = 40.0
joint_constraints/angular_limit_lower = -40.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/Physical Bone footR" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_6nqmj")

[node name="LeftHookAttachment" type="BoneAttachment3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="13"]
transform = Transform3D(-0.837296, -0.524449, -0.154557, -0.487206, 0.843966, -0.224389, 0.248121, -0.112578, -0.962165, 0.00747722, 0.738568, 0.149725)
bone_name = "hand.L"
bone_idx = 10

[node name="LeftHook" type="Area3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/LeftHookAttachment" index="0"]
transform = Transform3D(1, 2.23517e-08, 2.98023e-08, -1.19209e-07, 1, 2.98023e-08, -2.98023e-08, 4.47035e-08, 1, 0, 0.134269, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/LeftHookAttachment/LeftHook" index="0"]
shape = SubResource("BoxShape3D_gepra")

[node name="RightHookAttachment" type="BoneAttachment3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D" index="14"]
transform = Transform3D(-0.631553, 0.643029, -0.433189, -0.00500359, 0.555322, 0.831619, 0.775316, 0.52738, -0.347499, -0.504042, 0.286128, -0.102073)
bone_name = "hand.R"
bone_idx = 14

[node name="RightHook" type="Area3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/RightHookAttachment" index="0"]
transform = Transform3D(1, 0, 1.11759e-08, 2.98023e-08, 1, 3.72529e-08, 4.84288e-08, 3.72529e-09, 1, 8.9407e-08, 0.168705, 1.19209e-07)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="NPC_Kitchen_Male/Kitchen_Male/Skeleton3D/RightHookAttachment/RightHook" index="0"]
shape = SubResource("BoxShape3D_gepra")

[node name="NPC_Meat_Female" parent="." index="3"]
visible = false

[node name="Skeleton3D" parent="NPC_Meat_Female/Meat_Female" index="0"]
bones/0/position = Vector3(5.28339e-06, -0.396737, -0.636998)
bones/1/rotation = Quaternion(-0.0554633, 0.254238, -0.0526268, 0.964115)
bones/6/rotation = Quaternion(-0.105006, -0.0447483, 0.00393596, 0.993457)
bones/8/rotation = Quaternion(-0.146163, 0.487528, -0.700086, 0.500832)
bones/9/rotation = Quaternion(0.707552, 0.296646, 0.181561, 0.615148)
bones/10/rotation = Quaternion(0.232819, -0.116784, 0.107406, 0.95949)
bones/12/rotation = Quaternion(-0.260248, -0.489481, 0.688312, 0.467874)
bones/13/rotation = Quaternion(0.646303, 0.236457, 0.490043, 0.535013)
bones/17/rotation = Quaternion(0.940572, 0.186245, -0.0302871, 0.282346)
bones/18/rotation = Quaternion(0.21365, 0.0213446, 0.133953, 0.967447)
bones/19/rotation = Quaternion(-0.515611, -0.352211, -0.00980946, 0.781023)
bones/20/rotation = Quaternion(-0.041287, 0.974695, -0.218987, 0.0175885)
bones/21/rotation = Quaternion(0.992236, -0.0324609, -0.0135175, 0.119296)
bones/22/rotation = Quaternion(0.200308, -0.00324912, 0.12246, 0.972044)
bones/23/rotation = Quaternion(-0.573968, 0.0296394, -0.0951059, 0.812796)
bones/24/rotation = Quaternion(0.0610616, 0.964757, -0.206061, -0.151837)

[node name="Physical Bone Chest" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="1"]
transform = Transform3D(0.951252, -0.287943, -0.00816867, -0.00600251, 0.00856188, -0.987504, 0.28817, 0.944724, 0.00645889, -0.0585002, 0.228292, -0.520458)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00120752, -0.0257162, -0.124021)
body_offset = Transform3D(0.993961, -0.00208381, 1.83936e-07, -1.83332e-05, -8.9407e-07, -0.987559, 0.000358701, 0.987666, -1.82353e-06, 0.00114667, -0.122478, 0.0253992)

[node name="Physical Bone spine005" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="2"]
transform = Transform3D(0.990636, -0.0813419, 0.0154855, -0.00174529, -0.201214, -0.954486, 0.0845471, 0.950122, -0.201482, -0.0668123, 1.02484, -0.41686)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000716735, -0.0367098, 0.27556)
body_offset = Transform3D(0.994239, 4.97997e-05, -5.09247e-06, 2.3922e-05, 0.000454679, -0.975643, 5.27427e-05, 0.974595, -0.00019747, 0.000715837, 0.268864, 0.0358316)

[node name="Physical Bone upper_armL" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="3"]
transform = Transform3D(-0.909095, -0.395422, -0.0938409, -0.28072, 0.444853, 0.843862, -0.294566, 0.792642, -0.518041, 0.287219, 0.382471, -0.268794)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00829853, 0.000749392, 0.235182)
body_offset = Transform3D(0.996004, 0.00188658, -0.000390992, -0.00141591, -0.00192475, -0.994624, -0.000776753, 0.991225, -3.40939e-05, 0.00835592, 0.233907, -0.000741243)

[node name="Physical Bone forearmL" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="4"]
transform = Transform3D(-0.5819, -0.558037, 0.57748, -0.802897, 0.385802, -0.436869, 0.0227507, -0.723852, -0.678272, 0.171565, 0.304515, 0.00988856)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00706765, 0.00114708, 0.241796)
body_offset = Transform3D(0.991852, -0.00156333, -0.000857012, -0.000145271, -0.00190356, -0.992163, 4.48246e-05, 0.992071, -0.0017359, 0.00721908, 0.239902, -0.000717938)

[node name="Physical Bone upper_armR" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="5"]
transform = Transform3D(-0.934518, -0.259802, 0.216934, 0.103658, 0.386024, 0.908303, -0.322818, 0.877138, -0.335186, -0.454156, 0.37436, -0.510144)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00357988, -0.00272038, 0.235805)
body_offset = Transform3D(0.994122, 0.000944942, -0.00075154, -0.00037948, 0.000584424, -0.992181, -0.00130016, 0.992916, 0.000849336, -0.00337905, 0.233964, 0.00250548)

[node name="Physical Bone forearmR" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="6"]
transform = Transform3D(-0.659641, -0.739818, -0.0348692, -0.560399, 0.527547, -0.625317, 0.484961, -0.395864, -0.768466, -0.493206, 0.32742, -0.24587)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00575738, 0.00670555, 0.247498)
body_offset = Transform3D(0.992149, -0.000688031, -0.000253379, -0.00101253, -0.000128359, -0.991352, 0.00109118, 0.991134, -6.64592e-06, 0.0057795, 0.245353, -0.00663817)

[node name="Physical Bone Left_Thigh" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="7"]
transform = Transform3D(0.682203, 0.722121, -0.0236065, 0.359056, -0.313509, 0.869258, 0.621503, -0.60504, -0.474795, 0.0261875, -0.668255, -0.200934)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00241655, 0.00343696, 0.435603)
body_offset = Transform3D(0.990246, 0.00309497, 0.00140542, 0.000473171, 0.00100318, -0.990753, 0.000973165, 0.992878, -0.00131693, 0.00177014, 0.431573, -0.00283647)

[node name="Physical Bone shinL" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="8"]
transform = Transform3D(0.671896, 0.706562, -0.150892, 0.107574, 0.105366, 0.976883, 0.718032, -0.676466, -0.00552906, 0.0922036, -1.42748, 0.00137648)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0045231, 0.00161286, 0.392248)
body_offset = Transform3D(0.989233, 0.00255162, -0.000375854, -0.000106811, 0.000259698, -0.988483, -0.00221321, 0.983835, 0.000320022, -0.00433108, 0.387731, -0.00170231)

[node name="Physical Bone footL" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="9"]
transform = Transform3D(0.956678, -0.0852392, 0.239713, -0.195034, -0.847469, 0.476207, 0.164599, -0.508135, -0.835404, 0.131915, -1.87812, 0.0948758)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00276958, 0.0052218, 0.104432)
body_offset = Transform3D(0.990132, -1.42306e-06, -0.000967011, 9.90778e-05, -0.000118017, -0.991027, 0.000101499, 0.991802, 0.000379711, -0.00264126, 0.103495, -0.00521892)

[node name="Physical Bone Right_Thigh" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="10"]
transform = Transform3D(0.69849, 0.701055, 0.0326352, -0.0601842, 0.0140909, 0.986104, 0.699104, -0.698795, 0.0527306, -0.217972, -0.71698, -0.668396)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00176035, 0.00123215, 0.431301)
body_offset = Transform3D(0.990077, 0.00249195, 0.000128489, -0.000186227, -0.000130832, -0.988052, -0.00218812, 0.989941, -0.000205368, 0.0016844, 0.426147, -0.00113504)

[node name="Physical Bone shinR" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="11"]
transform = Transform3D(0.710576, 0.688705, -0.0752955, -0.300249, 0.404482, 0.855023, 0.623574, -0.588032, 0.497587, -0.199349, -1.48569, -0.888205)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00362152, -0.0015038, 0.394388)
body_offset = Transform3D(0.991923, 0.0022662, -0.000499427, -0.000559121, -0.000970125, -0.992132, -0.0010058, 0.991813, 0.000430703, 0.00379264, 0.391282, 0.00131798)

[node name="Physical Bone footR" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="12"]
transform = Transform3D(0.721698, 0.412173, 0.533006, -0.118004, -0.691666, 0.694501, 0.666513, -0.570107, -0.454358, -0.230614, -1.90496, -1.03259)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00726136, 0.0125415, 0.109995)
body_offset = Transform3D(0.989449, 0.000514686, 0.00139627, 0.00152239, 0.00161642, -0.98634, -0.0014306, 0.986564, -4.77433e-05, 0.00702471, 0.108483, -0.0123781)

[node name="LeftHookAttachment" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="13"]
transform = Transform3D(-0.804186, -0.58389, -0.111163, -0.591054, 0.765831, 0.253292, -0.062763, 0.269397, -0.960981, 0.0268302, 0.440134, 0.163811)

[node name="RightHookAttachment" parent="NPC_Meat_Female/Meat_Female/Skeleton3D" index="14"]
transform = Transform3D(-0.595523, 0.680672, -0.426658, 0.363758, 0.702021, 0.612246, 0.716262, 0.209406, -0.66567, -0.48697, 0.479982, -0.083001)

[node name="CharacterAnimationTree" parent="." index="4"]
parameters/Movement/playback = SubResource("AnimationNodeStateMachinePlayback_cafs0")

[node name="ProjectileTimer" parent="Timers" index="1"]
wait_time = 0.5

[editable path="NPC_Kitchen_Male"]
[editable path="NPC_Meat_Female"]
